--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,12 @@
 .main {
-	display: block;
-	font-size: 30px;
-	color: red;
+  max-width: 400px;
+  min-height: 100vh;
+  margin: auto;
+  padding: 10px 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
+
